[package]
authors = ["Fabian Möller <fabianm88@gmail.com>"]
description = "Prometheus exporter reporting ping statistics"
edition = "2021"
keywords = ["prometheus", "prometheus-exporter", "icmp", "ping"]
license = "MIT OR Apache-2.0"
name = "ping-exporter"
readme = "README.md"
repository = "https://github.com/B4dM4n/ping-exporter"
version = "0.3.4"

[dependencies]
anyhow = "1.0.95"
arc-swap = "1.7.1"
axum = { version = "0.8.1", features = ["tracing"] }
base64 = "0.22.1"
clap = { version = "4.5.27", features = ["derive"] }
futures-util = { version = "0.3.31", default-features = false }
hickory-resolver = { version = "0.24.2", features = ["tokio"] }
humantime = "2.1.0"
nix = { version = "0.29.0", features = ["socket"] }
password-auth = "1.0.0"
prometheus = { version = "0.13.4", default-features = false, features = ["process"] }
rand = "0.8.5"
sd-notify = "0.4.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_yml = "0.0.12"
surge-ping = "0.8.1"
tokio = { version = "1.43.0", features = ["macros", "signal", "rt-multi-thread"] }
tokio-util = "0.7.13"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono"] }
