[package]
authors = ["Fabian Möller <fabianm88@gmail.com>"]
description = "Prometheus exporter reporting ping statistics"
edition = "2024"
keywords = ["prometheus", "prometheus-exporter", "icmp", "ping"]
license = "MIT OR Apache-2.0"
name = "ping-exporter"
readme = "README.md"
repository = "https://github.com/B4dM4n/ping-exporter"
version = "0.3.7"

[dependencies]
anyhow = "1.0"
arc-swap = "1.7"
axum = { version = "0.8", features = ["tracing"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
futures-util = { version = "0.3", default-features = false }
hickory-resolver = { version = "0.25", features = ["tokio"] }
humantime = "2.2"
nix = { version = "0.30", features = ["socket"] }
openidconnect = "4.0"
password-auth = "1.0"
prometheus = { version = "0.14", default-features = false, features = ["process"] }
rand = "0.9"
reqwest = { version = "0.12", default-features = false }
sd-notify = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0"
surge-ping = "0.8"
tokio = { version = "1.47", features = ["macros", "signal", "rt-multi-thread"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }

[lints.rust]
absolute_paths_not_starting_with_crate = "warn"
ambiguous_negative_literals = "warn"
closure_returning_async_block = "warn"
deprecated_safe_2024 = "warn"
deref_into_dyn_supertrait = "warn"
edition_2024_expr_fragment_specifier = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
ffi_unwind_calls = "warn"
if_let_rescope = "warn"
impl_trait_overcaptures = "warn"
impl_trait_redundant_captures = "warn"
keyword-idents = "warn"
keyword_idents_2018 = "warn"
keyword_idents_2024 = "warn"
let_underscore_drop = "warn"
linker_messages = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
missing_unsafe_on_extern = "warn"
non_ascii_idents = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
rust_2021_incompatible_closure_captures = "warn"
rust_2021_incompatible_or_patterns = "warn"
rust_2021_prefixes_incompatible_syntax = "warn"
rust_2021_prelude_collisions = "warn"
rust_2024_guarded_string_incompatible_syntax = "warn"
rust_2024_incompatible_pat = "warn"
rust_2024_prelude_collisions = "warn"
single_use_lifetimes = "warn"
tail_expr_drop_order = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
# unreachable_pub = "warn"
unsafe_attr_outside_unsafe = "warn"
# unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
unstable_features = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
unused_results = "warn"
variant_size_differences = "warn"

## unstable lints
# fuzzy_provenance_casts = "warn"
# lossy_provenance_casts = "warn"
# multiple_supertrait_upcastable = "warn"
# must_not_suspend = "warn"
# non_exhaustive_omitted_patterns = "warn"
# supertrait_item_shadowing_definition = "warn"
# supertrait_item_shadowing_usage = "warn"
# unqualified_local_imports = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"
must_use_candidate = "allow"
